ProTrackDev/force-app/main/default/objects/TR_ToastEvent__e/fields/TR_Key__c.field-meta.xml
<CustomField>
    <fullName>TR_Key__c</fullName>
    <description>Unique key which is used to identify the toast in lightning component.</description>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>