ProTrackDev/force-app/main/default/objects/TR_ToastEvent__e/fields/TR_Message__c.field-meta.xml
<CustomField>
    <fullName>TR_Message__c</fullName>
    <description>Message to be displayed in Toast</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>