ProTrackDev/force-app/main/default/objects/TR_ToastEvent__e/fields/TR_Mode__c.field-meta.xml
<CustomField>
    <fullName>TR_Mode__c</fullName>
    <description>Mode of the toast. Must be:- dismissable, pester or sticky</description>
    <label>Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>