ProTrackDev/force-app/main/default/objects/TR_ToastEvent__e/fields/TR_Title__c.field-meta.xml
<CustomField>
    <fullName>TR_Title__c</fullName>
    <description>Title of the Toast</description>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>